up cs_qgisprocess

--- a/cs_qgisprocess.tex
+++ b/cs_qgisprocess.tex
@@ -56,7 +56,7 @@
     \begin{tikzpicture}[remember picture,overlay]
       \node[fill=mycolor, text=white, minimum width=\paperwidth, minimum height=0.7cm, anchor=south] at (current page.south) {};
       \node[anchor=east, text=white, yshift=0.35cm, xshift=-14.5cm] at (current page.south) {\textcolor{white}{\textbf{Created by Antony Barja}}};
-      \node[anchor=center, text=white, yshift=0.35cm, xshift= 14.5cm] at (current page.south) {\textcolor{white}{\textbf{Revised by Floris Dorian and updated: 23/06/2023}}};
+      \node[anchor=center, text=white, yshift=0.35cm, xshift= 14.5cm] at (current page.south) {\textcolor{white}{\textbf{Revised by Floris Vanderhaeghe and updated: 23/06/2023}}};
     \end{tikzpicture}
   }
   \renewcommand{\footrulewidth}{0pt}
@@ -73,7 +73,7 @@
 \end{flushleft}
 
 \begin{tikzpicture}[remember picture, overlay]
-  \node[anchor=north east, yshift=-12pt, xshift=-12pt] at (current page.north east) {\includegraphics[width=0.12\textwidth]{qgisprocess.png}};
+  \node[anchor=north east, yshift=-12pt, xshift=-12pt] at (current page.north east) {\includegraphics[width=0.12\textwidth]{logo/qgisprocess.png}};
 \end{tikzpicture}
 
 \begin{multicols*}{3}
