--- a/latex/cs_qgisprocess_es.tex
+++ b/latex/cs_qgisprocess_es.tex
@@ -317,7 +317,7 @@ qgisprocess nos brinda nuevas funcionalidades para la generación de archivos en
  > qgis_run_algorithm(
     algorithm ="sagang:sagawetnessindex",
     DEM = dem,
-    TPI = "tpi.sdat") |>
+    TWI = "twi.sdat") |>
     qgis_extract_output("TWI") |>
     qgis_as_terra() |>
     plot(col = cptcity::cpt(pal = "ocal_blues"))
