--- a/latex/cs_qgisprocess_en.tex
+++ b/latex/cs_qgisprocess_en.tex
@@ -149,8 +149,7 @@
 \vspace{10pt}
    \textbf{\fontsize{20}{5}\selectfont \textbf{Installation}\vspace{5pt}}
     \begin{lstlisting}[style=Rstyle]
- > install.packages("remotes")
- > install_github("r-spatial/qgisprocess")
+ > install.packages("qgisprocess")
  > library(qgisprocess)
     \end{lstlisting}
 \end{minipage}
