--- a/latex/cs_qgisprocess_es.tex
+++ b/latex/cs_qgisprocess_es.tex
@@ -155,8 +155,7 @@ Este paquete facilita el uso de algoritmos de procesamiento nativos y algunos de
 \vspace{10pt}
    \textbf{\fontsize{44}{44}\selectfont \textbf{Instalación}\vspace{5pt}}
     \begin{lstlisting}[style=Rstyle]
- > install.packages("remotes")
- > install_github("r-spatial/qgisprocess")
+ > install.packages("qgisprocess")
  > library(qgisprocess)
     \end{lstlisting}
 \end{minipage}
